// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Component CommonCollection should return 8 articles 1`] = `
<div>
  <div
    class="ln-roof --generic"
  >
    <div
      class="--ln-roof-full --d-flex --jc-between --pt-md"
    >
      <div
        class="--ln-roof-left"
      >
        <div
          class="--d-flex --ai-center --uppercase"
        >
          <span
            class="text ln-text --mt-3xs --roof-title"
          >
            CommonCOllection
          </span>
          
        </div>
      </div>
      <div
        class="--ln-roof-right --d-flex --ai-center --generico"
      >
        
      </div>
    </div>
  </div>
  <div
    class="ln-bngrid"
  >
    <div
      class="grid container-op-top --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
    >
      <div
        class="grid-item --0 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-top --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
            rel="nofollow"
            target="_blank"
            title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
          >
            <section
              class="media-container --mb-xs"
              href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
              title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                  srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-m"
              >
                
                Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
              </h2>
              
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
            rel="nofollow"
            target="_blank"
            title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
          >
            <section
              class="media-container --mb-xs"
              href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
              title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                  srcset="https://resizer.glanacion.com/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 360w, https://resizer.glanacion.com/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 768w, https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-m"
              >
                
                Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
              </h2>
              
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --2 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
            rel="nofollow"
            target="_blank"
            title="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
          >
            <section
              class="media-container --mb-xs"
              href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
              title="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/QvS066D_Bux935YAFy2ZWjxQbIU=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg"
                  srcset="https://resizer.glanacion.com/resizer/Fu3kfsnTFGAe8Kt-P34acHaqgc4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg 360w, https://resizer.glanacion.com/resizer/Q8uUmueIrYd77Kp1rTfU3z88PbY=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg 768w, https://resizer.glanacion.com/resizer/QvS066D_Bux935YAFy2ZWjxQbIU=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-m"
              >
                
                Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo
              </h2>
              
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --3 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
            rel="nofollow"
            target="_blank"
            title="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
          >
            <section
              class="media-container --mb-xs"
              href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
              title="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/A5RU5shS7UAkEHqazhRzsxhlQos=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg"
                  srcset="https://resizer.glanacion.com/resizer/ZNcwkfsAPZKeSNfJT3QH_Q4sJkU=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg 360w, https://resizer.glanacion.com/resizer/dcXGl99iWjvLpMORfl-mqFZyaJ0=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg 768w, https://resizer.glanacion.com/resizer/A5RU5shS7UAkEHqazhRzsxhlQos=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-m"
              >
                
                El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres
              </h2>
              
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --4 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-top --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
            rel="nofollow"
            target="_blank"
            title="Historias El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
          >
            <section
              class="media-container --mb-xs"
              href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
              title="El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/i0pv6vKvhUhf40nK8lofBPF6ztQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg"
                  srcset="https://resizer.glanacion.com/resizer/rEUp65jkcaI8St-_G0QrexhCBsI=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg 360w, https://resizer.glanacion.com/resizer/-0CRKhU6ZKyPbBGA2T1SnRlU0Qg=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg 768w, https://resizer.glanacion.com/resizer/i0pv6vKvhUhf40nK8lofBPF6ztQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-m"
              >
                <span
                  class="text ln-text lead --prumo --font-black"
                >
                  Historias
                   
                </span>
                El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense
              </h2>
              
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --5 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/deportes/test-noticia-en-arc-nid16032021-2/"
            rel="nofollow"
            target="_blank"
            title="Test noticia en ARC"
          >
            <section
              class="media-container --mb-xs"
              href="/deportes/test-noticia-en-arc-nid16032021-2/"
              title="Test noticia en ARC"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="Test noticia en ARC"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/d1TJBcVOkZorPV-3PwQ3kPfdJ7c=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg"
                  srcset="https://resizer.glanacion.com/resizer/nNQd85R22QnfEjty9_GwPJSb9yc=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg 360w, https://resizer.glanacion.com/resizer/13v05lI2fYMPBVpL1jPC8RvQcTg=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg 768w, https://resizer.glanacion.com/resizer/d1TJBcVOkZorPV-3PwQ3kPfdJ7c=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/deportes/test-noticia-en-arc-nid16032021-2/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-m"
              >
                
                Test noticia en ARC
              </h2>
              
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --6 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/revista-living/test-noticia-en-arc-nid03012023/"
            rel="nofollow"
            target="_blank"
            title="Test noticia en ARC"
          >
            <section
              class="media-container --mb-xs"
              href="/revista-living/test-noticia-en-arc-nid03012023/"
              title="Test noticia en ARC"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="Test noticia en ARC"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/xlja88hkKzQSTzfQTXX97izu5SQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg"
                  srcset="https://resizer.glanacion.com/resizer/_bT-GKL06Ie_uDCQKuG1nQ2hcqE=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg 360w, https://resizer.glanacion.com/resizer/-g5rNPf2Az-z6OvSdvenYWWoSQ4=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg 768w, https://resizer.glanacion.com/resizer/xlja88hkKzQSTzfQTXX97izu5SQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/revista-living/test-noticia-en-arc-nid03012023/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-m"
              >
                
                Test noticia en ARC
              </h2>
              
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --7 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
            rel="nofollow"
            target="_blank"
            title="Santa Cruz Bullrich visita El Calafate y presenta libro"
          >
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-m"
              >
                <span
                  class="text ln-text lead --prumo --font-black"
                >
                  Santa Cruz
                   
                </span>
                Bullrich visita El Calafate y presenta libro
              </h2>
              <h3
                class="text ln-text --mb-xs --font-s subhead"
              >
                Incidentes frente al hotel donde convocó a militantes 
              </h3>
              
            </section>
          </a>
        </article>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests Component CommonCollection should return hashTag with 7 articles 1`] = `
<div>
  <div
    class="ln-roof --generic"
  >
    <div
      class="--ln-roof-full --d-flex --jc-between --pt-md"
    >
      <div
        class="--ln-roof-left"
      >
        <div
          class="--d-flex --ai-center --uppercase"
        >
          <span
            class="text ln-text --mt-3xs --roof-title"
          >
            CommonCOllection
          </span>
          
        </div>
      </div>
      <div
        class="--ln-roof-right --d-flex --ai-center --generico"
      >
        
      </div>
    </div>
  </div>
  <div
    class="ln-caja-hashtag"
  >
    <div
      class="grid --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
    >
      <div
        class="grid-item --0 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --l --regular --mobile-img-top --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
            rel="nofollow"
            target="_blank"
            title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
          >
            <section
              class="media-container --mb-xs"
              href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
              title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                  srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-l"
              >
                
                Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --1 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --l --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
            rel="nofollow"
            target="_blank"
            title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
          >
            <section
              class="media-container --mb-xs"
              href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
              title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                  srcset="https://resizer.glanacion.com/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 360w, https://resizer.glanacion.com/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 768w, https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-l"
              >
                
                Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --2 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --l --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
            rel="nofollow"
            target="_blank"
            title="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
          >
            <section
              class="media-container --mb-xs"
              href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
              title="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/QvS066D_Bux935YAFy2ZWjxQbIU=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg"
                  srcset="https://resizer.glanacion.com/resizer/Fu3kfsnTFGAe8Kt-P34acHaqgc4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg 360w, https://resizer.glanacion.com/resizer/Q8uUmueIrYd77Kp1rTfU3z88PbY=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg 768w, https://resizer.glanacion.com/resizer/QvS066D_Bux935YAFy2ZWjxQbIU=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/ZMGWRNOYQJCUNANSA2AZBKFGDU.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/deportes/tenis/papelon-benoit-paire-se-despidio-del-argentina-open-con-una-actuacion-escandalo-nid05032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-l"
              >
                
                Papelón: Benoit Paire se despidió del Argentina Open con una actuación escandalo
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --3 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --l --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
            rel="nofollow"
            target="_blank"
            title="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
          >
            <section
              class="media-container --mb-xs"
              href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
              title="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/A5RU5shS7UAkEHqazhRzsxhlQos=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg"
                  srcset="https://resizer.glanacion.com/resizer/ZNcwkfsAPZKeSNfJT3QH_Q4sJkU=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg 360w, https://resizer.glanacion.com/resizer/dcXGl99iWjvLpMORfl-mqFZyaJ0=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg 768w, https://resizer.glanacion.com/resizer/A5RU5shS7UAkEHqazhRzsxhlQos=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/HNSRVP73FBA37LQCCLQ5ZAQMXU.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/deportes/el-musico-mexicano-encargado-de-enviar-un-mensaje-de-la-humanidad-a-los-extraterrestres-nid16032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-l"
              >
                
                El músico mexicano encargado de enviar un mensaje de la humanidad a los extraterrestres
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --4 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --l --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
            rel="nofollow"
            target="_blank"
            title="Historias El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
          >
            <section
              class="media-container --mb-xs"
              href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
              title="El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/i0pv6vKvhUhf40nK8lofBPF6ztQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg"
                  srcset="https://resizer.glanacion.com/resizer/rEUp65jkcaI8St-_G0QrexhCBsI=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg 360w, https://resizer.glanacion.com/resizer/-0CRKhU6ZKyPbBGA2T1SnRlU0Qg=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg 768w, https://resizer.glanacion.com/resizer/i0pv6vKvhUhf40nK8lofBPF6ztQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/JUY5G7PUBFCA3FGTCLGZVE4FB4.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/deportes/futbol/el-boliviano-que-escapo-por-segunda-vez-de-la-muerte-tras-sobrevivir-a-la-caida-del-avion-del-nid05032021/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-l"
              >
                <span
                  class="text ln-text lead --prumo --font-black"
                >
                  Historias
                   
                </span>
                El boliviano que escapó por segunda vez de la muerte, tras sobrevivir a la caída del avión del Chapecoense
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --5 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --l --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/deportes/test-noticia-en-arc-nid16032021-2/"
            rel="nofollow"
            target="_blank"
            title="Test noticia en ARC"
          >
            <section
              class="media-container --mb-xs"
              href="/deportes/test-noticia-en-arc-nid16032021-2/"
              title="Test noticia en ARC"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="Test noticia en ARC"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/d1TJBcVOkZorPV-3PwQ3kPfdJ7c=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg"
                  srcset="https://resizer.glanacion.com/resizer/nNQd85R22QnfEjty9_GwPJSb9yc=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg 360w, https://resizer.glanacion.com/resizer/13v05lI2fYMPBVpL1jPC8RvQcTg=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg 768w, https://resizer.glanacion.com/resizer/d1TJBcVOkZorPV-3PwQ3kPfdJ7c=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/URH7IRLYKNCL5JYIQ5HDBZG3XI.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/deportes/test-noticia-en-arc-nid16032021-2/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-l"
              >
                
                Test noticia en ARC
              </h2>
            </section>
          </a>
        </article>
      </div>
      <div
        class="grid-item --6 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --l --regular --mobile-img-right --tablet-img-top --desktop-img-top"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/revista-living/test-noticia-en-arc-nid03012023/"
            rel="nofollow"
            target="_blank"
            title="Test noticia en ARC"
          >
            <section
              class="media-container --mb-xs"
              href="/revista-living/test-noticia-en-arc-nid03012023/"
              title="Test noticia en ARC"
            >
              <picture
                class="ln-placeholder --d-flex --jc-center --relative --ar-picture"
              >
                <img
                  alt="Test noticia en ARC"
                  class="image --d-flex --w-100 --h-100"
                  decoding="async"
                  height="513"
                  src="https://resizer.glanacion.com/resizer/xlja88hkKzQSTzfQTXX97izu5SQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg"
                  srcset="https://resizer.glanacion.com/resizer/_bT-GKL06Ie_uDCQKuG1nQ2hcqE=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg 360w, https://resizer.glanacion.com/resizer/-g5rNPf2Az-z6OvSdvenYWWoSQ4=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg 768w, https://resizer.glanacion.com/resizer/xlja88hkKzQSTzfQTXX97izu5SQ=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/VJAAAHT7ZBGHTKXL5EHIEARWKQ.jpg 351w, "
                  width="768"
                />
              </picture>
            </section>
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/revista-living/test-noticia-en-arc-nid03012023/"
            >
              <h2
                class="text ln-text title --mb-xs --prumo --font-semi --font-l"
              >
                
                Test noticia en ARC
              </h2>
            </section>
          </a>
        </article>
      </div>
    </div>
  </div>
</div>
`;
